# devops-metrics-agent

./: .env  .gitignore  README.md  pyproject.toml
my_metric_agent/: __init__.py  agent.py  config.py  main.py
my_metric_agent/data/: metrics_db.sqlite
my_metric_agent/tools/: auth_memory.py  github_tools.py  metrics_tools.py
scripts/: inspect_memory.py  inspect_sessions.py
tools/: auth_memory.py
